[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/InfiniteBackground.gd" type="Script" id=1]
[ext_resource path="res://Art/background.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "BackToNormal"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("background2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("background1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "ChangeToRed"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("background1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("background2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}

[node name="InfiniteBackground" type="Node"]
script = ExtResource( 1 )

[node name="background1" type="Sprite" parent="."]
position = Vector2( 0, -500 )
texture = ExtResource( 2 )
centered = false

[node name="background2" type="Sprite" parent="."]
position = Vector2( 0, -1500 )
texture = ExtResource( 2 )
centered = false

[node name="ChangeTint" type="AnimationPlayer" parent="."]
anims/BackToNormal = SubResource( 1 )
anims/ChangeToRed = SubResource( 2 )
